[project]
name = "comfyui_fnodes"
description = "ComfyUI_fnodes is a collection of custom nodes designed for ComfyUI. These nodes provide additional functionality that can enhance your ComfyUI workflows.\nFile manipulation tools, Image resizing tools, IPAdapter tools, Image processing tools, Mask tools, Face analysis tools, Sampler tools, Miscellaneous tools"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/syaofox/ComfyUI_fnodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "syaofox"
DisplayName = "ComfyUI_fnodes"
Icon = ""
